--- a/src/edit.html
+++ b/src/edit.html
@@ -1,10 +1,18 @@
+<script>
+  function show(){
+    alert("ehh");
+  }
+</script>
+
 <form role="form">
   <div class="form-group">
     <label for="path">Github Repository Path</label>
+    <span class="grey glyphicon glyphicon-info-sign ng-scope" tooltip-trigger="outsideClick" tooltip-is-open="tooltipIsOpen"  ng-mouseover="tooltipIsOpen = !tooltipIsOpen" uib-tooltip-html="accessTokenTooltip" tooltip-placement="bottom" aria-label=" Tooltip"></span>
     <input type="text" class="form-control" id="path" ng-model="config.path" placeholder="Enter Path (username/reponame)">
   </div>
   <div class="form-group">
     <label for="path">Access Token</label>
+    <span class="grey glyphicon glyphicon-info-sign ng-scope" tooltip-trigger="outsideClick" tooltip-is-open="tooltipIsOpen"  ng-mouseover="tooltipIsOpen = !tooltipIsOpen" uib-tooltip-html="accessTokenTooltip" tooltip-placement="bottom" aria-label="Access Token Tooltip"></span>
     <input type="text" class="form-control" id="path" ng-model="config.accessToken">
   </div>
 </form>
