--- a/src/events.org.edit.html
+++ b/src/events.org.edit.html
@@ -1,10 +1,12 @@
 <form role="form">
   <div class="form-group">
     <label for="path">Organisation</label>
+    <span class="grey glyphicon glyphicon-info-sign ng-scope" uib-tooltip="Here you can select the organisation about whose git events you want to display information, e.g. cloudogu." tooltip-placement="bottom" aria-label="Here you can select the organisation about whose git events you want to display information, e.g. cloudogu."></span>
     <input type="text" class="form-control" id="path" ng-model="config.org" placeholder="Enter Organisation">
   </div>
   <div class="form-group">
     <label for="path">Access Token</label>
+    <span class="grey glyphicon glyphicon-info-sign ng-scope" tooltip-trigger="outsideClick" tooltip-is-open="tooltipIsOpen"  ng-mouseover="tooltipIsOpen = !tooltipIsOpen" uib-tooltip-html="accessTokenTooltip" tooltip-placement="bottom" aria-label="Access Token Tooltip"></span>
     <input type="text" class="form-control" id="path" ng-model="config.accessToken">
   </div>
 </form>
