--- a/src/events.user.edit.html
+++ b/src/events.user.edit.html
@@ -1,14 +1,17 @@
 <form role="form">
   <div class="form-group">
     <label for="path">User Name</label>
+    <span class="grey glyphicon glyphicon-info-sign ng-scope" uib-tooltip="Here you can select the user about whose git events you want to display information." tooltip-placement="bottom" aria-label="Here you can select the user about whose git events you want to display information."></span>
     <input type="text" class="form-control" id="path" ng-model="config.user" placeholder="Enter User (username)">
   </div>
   <div class="form-group">
     <label for="path">Organisation</label>
+    <span class="grey glyphicon glyphicon-info-sign ng-scope" uib-tooltip="Here you can select the organisation about whose git events you want to display information, e.g. cloudogu. Entering a organisation is optional." tooltip-placement="bottom" aria-label="Here you can select the organisation about whose git events you want to display information, e.g. cloudogu. Entering a organisation is optional."></span>
     <input type="text" class="form-control" id="path" ng-model="config.org" placeholder="(Optional) Enter Organisation">
   </div>
   <div class="form-group">
     <label for="path">Access Token</label>
+    <span class="grey glyphicon glyphicon-info-sign ng-scope" tooltip-trigger="outsideClick" tooltip-is-open="tooltipIsOpen"  ng-mouseover="tooltipIsOpen = !tooltipIsOpen" uib-tooltip-html="accessTokenTooltip" tooltip-placement="bottom" aria-label="Access Token Tooltip"></span>
     <input type="text" class="form-control" id="path" ng-model="config.accessToken" ng-required="config.org">
   </div>
 </form>
