--- a/src/events.org.edit.html
+++ b/src/events.org.edit.html
@@ -1,12 +1,12 @@
 <form role="form">
   <div class="form-group">
     <label for="path">Organisation</label>
-    <span class="grey glyphicon glyphicon-info-sign ng-scope" uib-tooltip="Here you can select the organisation about whose git events you want to display information, e.g. cloudogu." tooltip-placement="bottom" aria-label="Here you can select the organisation about whose git events you want to display information, e.g. cloudogu."></span>
-    <input type="text" class="form-control" id="path" ng-model="config.org" placeholder="Enter Organisation">
+    <span class="grey glyphicon glyphicon-info-sign ng-scope" tabindex="0" ng-focus="organisationTooltipIsOpen = !organisationTooltipIsOpen" tooltip-trigger="outsideClick" tooltip-is-open="organisationTooltipIsOpen" ng-mouseenter="organisationTooltipIsOpen = true" uib-tooltip="Here you can select the organisation about whose git events you want to display information, e.g. cloudogu. Entering a organisation is optional." tooltip-placement="bottom" aria-label="Here you can select the organisation about whose git events you want to display information, e.g. cloudogu. Entering a organisation is optional."></span>
+    <input type="text" class="form-control" id="path" ng-model="config.org" placeholder="Enter Organisation" required>
   </div>
   <div class="form-group">
     <label for="path">Access Token</label>
-    <span class="grey glyphicon glyphicon-info-sign ng-scope" tooltip-trigger="outsideClick" tooltip-is-open="tooltipIsOpen"  ng-mouseover="tooltipIsOpen = !tooltipIsOpen" uib-tooltip-html="accessTokenTooltip" tooltip-placement="bottom" aria-label="Access Token Tooltip"></span>
-    <input type="text" class="form-control" id="path" ng-model="config.accessToken">
+    <span class="grey glyphicon glyphicon-info-sign ng-scope" tabindex="0" ng-focus="accessTokenTooltipIsOpen = !accessTokenTooltipIsOpen" tooltip-trigger="outsideClick" tooltip-is-open="accessTokenTooltipIsOpen" ng-mouseenter="accessTokenTooltipIsOpen = true"  uib-tooltip-html="accessTokenTooltip" tooltip-placement="top" aria-label="Access Token Tooltip"></span>
+    <input type="text" class="form-control" id="path" ng-model="config.accessToken" required>
   </div>
 </form>
