fix tooltip placement

--- a/src/commits.html
+++ b/src/commits.html
@@ -1,4 +1,4 @@
-<div>
+<div on-escape="closeTooltip(e)">
   <div ng-if="!vm.commits" class="alert alert-info">
     Please configure the widget
   </div>
