change wording to be more precise an short.

--- a/src/events.org.edit.html
+++ b/src/events.org.edit.html
@@ -1,7 +1,7 @@
 <form role="form">
   <div class="form-group">
     <label for="path">Organisation</label>
-    <span class="grey glyphicon glyphicon-info-sign ng-scope" tabindex="0" ng-focus="organisationTooltipIsOpen = !organisationTooltipIsOpen" tooltip-trigger="outsideClick" tooltip-is-open="organisationTooltipIsOpen" ng-mouseenter="organisationTooltipIsOpen = true" uib-tooltip="Here you can select the organisation about whose git events you want to display information, e.g. cloudogu. Entering a organisation is optional." tooltip-placement="top" aria-label="Here you can select the organisation about whose git events you want to display information, e.g. cloudogu. Entering a organisation is optional."></span>
+    <span class="grey glyphicon glyphicon-info-sign ng-scope" tabindex="0" ng-focus="organisationTooltipIsOpen = !organisationTooltipIsOpen" tooltip-trigger="outsideClick" tooltip-is-open="organisationTooltipIsOpen" ng-mouseenter="organisationTooltipIsOpen = true" uib-tooltip="Enter the github-organisation whose git events you want to display, e.g. cloudogu." tooltip-placement="top" aria-label="Enter the github-organisation whose git events you want to display, e.g. cloudogu."></span>
     <input type="text" class="form-control" id="path" ng-model="config.org" placeholder="Enter Organisation" required>
   </div>
   <div class="form-group">
