--- a/src/events.org.edit.html
+++ b/src/events.org.edit.html
@@ -1,12 +1,28 @@
 <form role="form">
   <div class="form-group">
     <label for="path">Organisation</label>
-    <span class="grey glyphicon glyphicon-info-sign ng-scope" tabindex="0" ng-focus="organisationTooltipIsOpen = !organisationTooltipIsOpen" tooltip-trigger="outsideClick" tooltip-is-open="organisationTooltipIsOpen" ng-mouseenter="organisationTooltipIsOpen = true" uib-tooltip="Enter the github-organisation whose git events you want to display, e.g. cloudogu." tooltip-placement="top" aria-label="Enter the github-organisation whose git events you want to display, e.g. cloudogu."></span>
+    <span class="glyphicon glyphicon-info-sign ng-scope"
+          tabindex="0"
+          ng-focus="organisationTooltipIsOpen = !organisationTooltipIsOpen"
+          tooltip-trigger="outsideClick"
+          tooltip-is-open="organisationTooltipIsOpen"
+          ng-mouseenter="organisationTooltipIsOpen = !organisationTooltipIsOpen"
+          uib-tooltip="Enter the github-organisation whose git events you want to display, e.g. cloudogu."
+          tooltip-placement="top"
+          aria-label="Enter the github-organisation whose git events you want to display, e.g. cloudogu."></span>
     <input type="text" class="form-control" id="path" ng-model="config.org" placeholder="Enter Organisation" required>
   </div>
   <div class="form-group">
     <label for="path">Access Token</label>
-    <span class="grey glyphicon glyphicon-info-sign ng-scope" tabindex="0" ng-focus="accessTokenTooltipIsOpen = !accessTokenTooltipIsOpen" tooltip-trigger="outsideClick" tooltip-is-open="accessTokenTooltipIsOpen" ng-mouseenter="accessTokenTooltipIsOpen = true"  uib-tooltip-html="accessTokenTooltip" tooltip-placement="top" aria-label="Access Token Tooltip"></span>
+    <span class="glyphicon glyphicon-info-sign ng-scope"
+          tabindex="0"
+          ng-focus="accessTokenTooltipIsOpen = !accessTokenTooltipIsOpen"
+          tooltip-trigger="outsideClick"
+          tooltip-is-open="accessTokenTooltipIsOpen"
+          ng-mouseenter="accessTokenTooltipIsOpen = true"
+          uib-tooltip-html="accessTokenTooltip"
+          tooltip-placement="top"
+          aria-label="Access Token Tooltip"></span>
     <input type="text" class="form-control" id="path" ng-model="config.accessToken" required>
   </div>
 </form>
